# cekwallet

./: .env.example  .gitignore  README.md  pyproject.toml  wallets.example.txt
cekwallet/: __init__.py  chains.py  cli.py  dex_pricer.py  etherscan.py  prices.py  reporter.py  rpc.py  scam_filter.py  scanner.py  wallet_io.py
tests/: test_chains.py  test_etherscan_client.py  test_rpc.py  test_scam_filter.py  test_scanner.py  test_wallet_io.py
