[project]
name = "cekwallet"
version = "0.1.0"
description = "Bot untuk cek isi wallet EVM lama di banyak chain (Etherscan V2 unified API)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "naonyeer" }]
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-requests",
]

[project.scripts]
cekwallet = "cekwallet.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cekwallet*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
